<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Open WiFi Cleaner</string>
    <string name="version">0.1.4</string>
    <string name="menu_about">About</string>
    <string name="menu_add">Add SSID</string>
    <string name="menu_remove">Remove SSID(s)</string>
    <string name="menu_clear_networks">Clear all networks</string>
    <string name="settings_key">com.dje.openwifinetworkremover.settings</string>
    <string name="settings_backup_key">settings</string>
    <string name="enabled_checkbox_label">Enabled</string>
    <string name="notification_checkbox_label">Notify on connect/disconnect</string>
    <string name="whitelist_heading">Whitelist</string>
    <string name="whitelist_add_button_label">Add</string>
    <string name="whitelist_remove_button_label">Remove</string>
    <string name="no_ssid_selected">No network SSID(s) selected!</string>
    <string name="ssid_already_in_whitelist">Network SSID already in whitelist!</string>
    <string name="empty_whitelist_message">All open networks will be forgotten!\n\nAdd SSIDs to keep specific networks</string>
    <string name="title_activity_about_interface">About</string><string name="version_header_label">Version</string>
    <string name="network_will_be_forgotten">Open network (will be forgotten)</string>
    <string name="network_forgotten">Open network forgotten</string>
    
    <string name="developer_header_label">Developers</string>
    <string name="about_blurb_label">Forgets open WiFi networks after disconnecting\n\nLicensed under the GNU GPL\nhttp://gnu.org/licenses/gpl\n\nhttps://github.com/duncanje/android-open-wifi-network-remover</string>
    <string-array name="developers">
        <item>Duncan Eastoe</item>
    </string-array>

</resources>