<menu xmlns:android="http://schemas.android.com/apk/res/android" 
	xmlns:owc="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_about"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_about"
        owc:showAsAction="never"
        android:title="@string/menu_about"/>
    
    <item android:id="@+id/menu_add"
		android:icon="@drawable/ic_menu_add"
		android:title="@string/menu_add"
		owc:showAsAction="ifRoom|withText" />

    <item android:id="@+id/menu_remove"
		android:icon="@drawable/ic_menu_remove"
		android:title="@string/menu_remove"
		owc:showAsAction="ifRoom|withText"
		android:visible="false" />
    
    <item android:id="@+id/menu_clear_networks"
		android:title="@string/menu_clear_whitelist"
        owc:showAsAction="never" />
    
</menu>