<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <CheckBox
        android:id="@+id/enabled_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkBoxClick"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/enabled_checkbox_label"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/settings_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible" >

        <CheckBox
            android:id="@+id/notification_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkBoxClick"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/notification_checkbox_label"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/whitelist_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/whitelist_header_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp" >

                <TextView
                    android:id="@+id/whitelist_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingTop="15dp"
                    android:text="@string/whitelist_heading"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Button
                    android:id="@+id/whitelist_add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical|center_horizontal|fill_horizontal"
                    android:minHeight="45dip"
                    android:minWidth="50dip"
                    android:onClick="whitelistAddHandler"
                    android:text="@string/whitelist_add_button_label" />

                <Button
                    android:id="@+id/whitelist_remove_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical|center_horizontal|fill_horizontal"
                    android:minHeight="45dip"
                    android:minWidth="50dip"
                    android:onClick="whitelistRemoveHandler"
                    android:text="@string/whitelist_remove_button_label" />

            </LinearLayout>

            <TextView
                android:id="@+id/empty_whitelist_label"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/whitelist_header_layout"
                android:layout_gravity="right"
                android:gravity="center"
                android:text="@string/empty_whitelist_message"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ListView
                android:id="@android:id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/whitelist_header_layout"
                android:choiceMode="multipleChoice" >

            </ListView>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>